# bootcamp-app

./: .gitignore  AGENTS.md  README.md  compose.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/api/: models.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_item_id.py
backend/config/: settings.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/: styles.css
frontend/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.spec.ts  app.ts
frontend/src/app/item-detail/: item-detail.html  item-detail.ts
frontend/src/app/item-list/: item-list.html  item-list.ts
frontend/src/app/item-register/: item-register.html  item-register.ts
samples/: books.csv  sales.csv
